# i3-auto-split

./: LICENSE  README.md  i3-auto-split.cabal  stack.yaml
src/: Main.hs
