cabal-version:       2.2 

name:                i3-auto-split
version:             0.1.0.0
synopsis:            automatically splits i3 windows in an alternating pattern
-- description:
homepage:            https://github.com/cynthion21x/i3-auto-split#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Cynthion21x 
maintainer:          cynthion21x@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable i3-auto-split
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <5,
                       i3ipc,
                       network,

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
